--- a/app/index.html
+++ b/app/index.html
@@ -1,66 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <title>The Sight of Ice Melting</title>
-    <style>
-      body {
-        background: black;
-        overflow: hidden;
-      }
-      a {
-        color: white;
-        position: fixed;
-        bottom: 1rem;
-      }
-      img {
-        display: block;
-        height: 95vh;
-        position: absolute;
-        width: auto;
-        top: 50%;
-        left: 50%;
-        transform: translateY(-50%) translateX(-50%)
-      }
-      h2 {
-        position: fixed;
-        top: 2rem;
-        font-family: 'IBM Plex Sans', sans-serif;
-        color: white;
-        font-size: 2.2rem;
-        text-align: center;
-        width: 100%;
-        font-weight: normal;
-      }
-    </style>
-</head>
-<body>
-<h1>The sight of ice melting</h1>
-<img id='result' src="./predictions/pred.png" alt="">
-<h2 id='time'>Time goes here</h2>    
-<a href="#1" id="pred">Make Prediction</a>
-    <script src="/socket.io/socket.io.js"></script>
-<script>
-  var socket = io();
-  
-  let btn = document.querySelector('#pred');
-  let resultEl = document.querySelector('#result');
-  let timeEl = document.querySelector('#time');
 
-  btn.addEventListener('click', function(e){
-    e.preventDefault()
-    console.log('hi')
-    socket.emit('getPred')
-    socket.on('predDone', function(timestamp){
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+  <title>The Sight of Ice Melting</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    body {
+      background: black;
+      padding: 5px;
+      overflow: visible;
+      font-family: 'IBM Plex Sans', sans-serif;
+    }
+
+    .controls {
+      position: fixed;
+    }
+
+    a {
+      color: white;
+      display: block;
+    }
+
+    .image-container {
+      display: flex;
+    }
+
+    .image-container li {
+      flex-basis: 50%;
+      margin-right: 2px;
+      position: relative;
+    }
+
+    img {
+      display: block;
+      width: 100%;
+      height: auto;
+    }
+
+    h2 {
+      top: 2rem;
+      position: absolute;
+      color: white;
+      font-size: 1.6rem;
+      text-align: center;
+      width: 100%;
+      font-weight: normal;
+    }
+  </style>
+</head>
+
+<body>
+  <h1>The sight of ice melting</h1>
+  <ul class="image-container">
+    <li>
+      <img id='capture' src="./predictions/pred.png" alt="">
+      <h2 id='time-capture'>Time goes here</h2>
+    </li>
+    <li>
+      <img id='result' src="./predictions/pred.png" alt="">
+      <h2 id='time-result'>Time goes here</h2>
+    </li>
+  </ul>
+  <div class="controls">
+    <a href="#1" id="btn_pred">Make Prediction</a>
+    <a href="#1" id="btn_capture">Capture Image</a>
+    <a href="#1" id="cycle">Run Cycle</a>
+  </div>
+  <script src="/socket.io/socket.io.js"></script>
+  <script>
+    var socket = io();
+
+    let btn_pred = document.querySelector('#btn_pred');
+    let btn_capture = document.querySelector('#btn_capture');
+    let btn_cycle = document.querySelector('#cycle');
+    let captureEl = document.querySelector('#capture');
+    let resultEl = document.querySelector('#result');
+    let time_capture = document.querySelector('#time-capture');
+    let time_result = document.querySelector('#time-result');
+
+    let latestCapture = 0;
+
+    function startCycle(){
+      socket.emit('runCycle')
+    }
+
+    btn_pred.addEventListener('click', function (e) {
+      e.preventDefault()
+      console.log(`Making prediction for ${latestCapture}`)
+      socket.emit('getPred', latestCapture)
+    })
+
+    btn_capture.addEventListener('click', function (e) {
+      e.preventDefault()
+      console.log('Get capt')
+      socket.emit('getCapture')
+    })
+    btn_cycle.addEventListener('click', function (e) {
+      e.preventDefault()
+      startCycle();
+    })
+    
+    const dateFormat = 'MMMM D, HH:mm:ss'
+
+    socket.on('predDone', function (timestamp) {
       let date = moment(+timestamp);
+      let futureDate = date.add(1, 'hours')
       console.log(`Prediction complete (${timestamp})`)
-      timeEl.innerHTML = `${date.format("MMM Do YYYY, HH:mm:ss")}`;
+      time_result.innerHTML = `${futureDate.format(dateFormat)}`;
       resultEl.setAttribute('src', `./predictions/pred-${timestamp}.png`);
     })
-  })
-</script>
+    socket.on('captureDone', function (timestamp) {
+      let date = moment(+timestamp);
+      latestCapture = +timestamp;
+      console.log(`Capture complete (${timestamp})`)
+      time_capture.innerHTML = `${date.format(dateFormat)}`;
+      captureEl.setAttribute('src', `./captures/scaled/capture-${timestamp}.png`);
+    })
+    
+    socket.on('cycleDone', function () {
+      socket.emit('runCycle')
+    })
+  
+  </script>
 </body>
+
 </html>
